--- a/compute_ddc_models.ipynb
+++ b/compute_ddc_models.ipynb
@@ -4,28 +4,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-02-04 10:38:49--  https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz\n",
+      "--2019-02-04 11:03:42--  https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz\n",
       "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
       "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz [following]\n",
-      "--2019-02-04 10:38:50--  https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz\n",
+      "--2019-02-04 11:03:43--  https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz\n",
       "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.252.133\n",
       "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.252.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 95274 (93K) [application/octet-stream]\n",
-      "Saving to: ‘prescriptions_sample.csv.gz’\n",
+      "Saving to: ‘data/prescriptions_sample.csv.gz’\n",
       "\n",
-      "prescriptions_sampl 100%[===================>]  93,04K  --.-KB/s    in 0,04s   \n",
+      "data/prescriptions_ 100%[===================>]  93,04K  --.-KB/s    in 0,04s   \n",
       "\n",
-      "2019-02-04 10:38:50 (2,22 MB/s) - ‘prescriptions_sample.csv.gz’ saved [95274/95274]\n",
+      "2019-02-04 11:03:43 (2,47 MB/s) - ‘data/prescriptions_sample.csv.gz’ saved [95274/95274]\n",
       "\n"
      ]
     },
@@ -45,17 +47,19 @@
     "import pandas as pd\n",
     "\n",
     "## example file\n",
-    "!wget https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz -O prescriptions_sample.csv.gz\n",
+    "!wget https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz -O data/prescriptions_sample.csv.gz\n",
     "    \n",
-    "prescription = pd.read_csv('prescriptions_sample.csv.gz')\n",
+    "prescription = pd.read_csv('data/prescriptions_sample.csv.gz')\n",
     "prescription.shape, prescription.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -85,9 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -106,74 +112,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>VARFARINA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>60.0</td>\n",
+       "      <th>16</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>70.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
+       "      <th>42</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>55.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>75.0</td>\n",
+       "      <td>45.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>40</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ENALAPRIL</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>VARFARINA</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>VARFARINA</td>\n",
+       "      <td>ENALAPRIL</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.1</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>17</th>\n",
        "      <td>PARACETAMOL</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -181,19 +187,19 @@
       ],
       "text/plain": [
        "     medication  frequency  dose  score\n",
-       "11    VARFARINA        1.0  60.0    3.0\n",
-       "22  PARACETAMOL        4.0  40.0    0.0\n",
-       "34  PARACETAMOL        6.0  30.0    3.0\n",
-       "25  PARACETAMOL        4.0  52.0    3.0\n",
-       "5   PARACETAMOL        1.0  75.0    3.0\n",
-       "10  PARACETAMOL        3.0  50.0    2.0\n",
-       "3     ENALAPRIL        2.0  10.0    2.0\n",
-       "1     VARFARINA        0.5   5.0    3.0\n",
-       "5     VARFARINA        1.0   5.1    3.0\n",
-       "14  PARACETAMOL        3.0  75.0    3.0"
+       "16  PARACETAMOL        4.0  25.0    2.0\n",
+       "13  PARACETAMOL        3.0  70.0    3.0\n",
+       "42  PARACETAMOL        6.0  55.0    3.0\n",
+       "2   PARACETAMOL        1.0  45.0    3.0\n",
+       "40  PARACETAMOL        6.0  45.0    3.0\n",
+       "8   PARACETAMOL        3.0  40.0    3.0\n",
+       "1     ENALAPRIL        1.0  20.0    1.0\n",
+       "35  PARACETAMOL        6.0  35.0    3.0\n",
+       "17  PARACETAMOL        4.0  30.0    0.0\n",
+       "18  PARACETAMOL        4.0  35.0    1.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,20 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "models.to_csv('model.csv.gz', compression='gzip', index=None)"
+    "models.to_csv('data/models.csv.gz', compression='gzip', index=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
