change build model input format

--- a/compute_ddc_models.ipynb
+++ b/compute_ddc_models.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Load Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -9,28 +19,6 @@
     "editable": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2019-02-04 11:03:42--  https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz\n",
-      "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
-      "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz [following]\n",
-      "--2019-02-04 11:03:43--  https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.252.133\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.252.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 95274 (93K) [application/octet-stream]\n",
-      "Saving to: ‘data/prescriptions_sample.csv.gz’\n",
-      "\n",
-      "data/prescriptions_ 100%[===================>]  93,04K  --.-KB/s    in 0,04s   \n",
-      "\n",
-      "2019-02-04 11:03:43 (2,47 MB/s) - ‘data/prescriptions_sample.csv.gz’ saved [95274/95274]\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -47,49 +35,25 @@
     "import pandas as pd\n",
     "\n",
     "## example file\n",
-    "!wget https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz -O data/prescriptions_sample.csv.gz\n",
+    "!wget -c https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz -O data/prescriptions_sample.csv.gz\n",
     "    \n",
     "prescription = pd.read_csv('data/prescriptions_sample.csv.gz')\n",
     "prescription.shape, prescription.columns"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Threshold ENALAPRIL : 0.125\n",
-      "Threshold PARACETAMOL : 0.022\n",
-      "Threshold VARFARINA : 0.083\n"
-     ]
-    }
-   ],
    "source": [
-    "import outliers\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "columns = ['medication', 'frequency', 'dose', 'score']\n",
-    "models = pd.DataFrame(columns=columns)\n",
-    "selected_medications = ['ENALAPRIL','PARACETAMOL','VARFARINA']\n",
-    "\n",
-    "for m in selected_medications:\n",
-    "    result = outliers.build_model(prescription, m)\n",
-    "    agg = result[columns].groupby(columns).count().reset_index()\n",
-    "    models = models.append(agg)"
+    "## Aggregate Tuples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -107,43 +71,187 @@
        "      <th>medication</th>\n",
        "      <th>frequency</th>\n",
        "      <th>dose</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>MORFINA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALOPURINOL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>DIAZEPAM</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>SULFAMETOXAZOL</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>960.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>POLIMIXINA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>375000.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
+       "      <td>MORFINA</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>VARFARINA</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>ENOXAPARINA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>6734</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         medication  frequency      dose  count\n",
+       "185         MORFINA        1.0      32.0     13\n",
+       "322     PARACETAMOL        4.0      30.0    566\n",
+       "2        ALOPURINOL        1.0     150.0     21\n",
+       "101        DIAZEPAM        6.0      10.0    118\n",
+       "416  SULFAMETOXAZOL        0.5     960.0      4\n",
+       "375      POLIMIXINA        2.0  375000.0      6\n",
+       "256         MORFINA        6.0      57.0      2\n",
+       "306     PARACETAMOL        1.0      40.0      2\n",
+       "436       VARFARINA        0.5       5.0      1\n",
+       "139     ENOXAPARINA        2.0      60.0   6734"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = ['medication', 'frequency', 'dose']\n",
+    "models = pd.DataFrame(columns=columns)\n",
+    "prescription['count'] = 1\n",
+    "agg_prescription = prescription[columns+['count']].groupby(columns).count().reset_index()\n",
+    "agg_prescription.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Build Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold ENALAPRIL : 0.125\n",
+      "Threshold PARACETAMOL : 0.022\n",
+      "Threshold VARFARINA : 0.083\n"
+     ]
+    }
+   ],
+   "source": [
+    "import outliers\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "columns = ['medication', 'frequency', 'dose', 'count', 'score']\n",
+    "models = pd.DataFrame(columns=columns)\n",
+    "selected_medications = ['ENALAPRIL','PARACETAMOL','VARFARINA']\n",
+    "\n",
+    "for m in selected_medications:\n",
+    "    result = outliers.build_model(agg_prescription, m)\n",
+    "    agg = result[columns].groupby(columns).count().reset_index()\n",
+    "    models = models.append(agg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>medication</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>dose</th>\n",
+       "      <th>count</th>\n",
        "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>45.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -151,55 +259,92 @@
        "      <td>PARACETAMOL</td>\n",
        "      <td>3.0</td>\n",
        "      <td>40.0</td>\n",
+       "      <td>21.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ENALAPRIL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
        "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>VARFARINA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3819.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>22</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3515.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     medication  frequency  dose  score\n",
-       "16  PARACETAMOL        4.0  25.0    2.0\n",
-       "13  PARACETAMOL        3.0  70.0    3.0\n",
-       "42  PARACETAMOL        6.0  55.0    3.0\n",
-       "2   PARACETAMOL        1.0  45.0    3.0\n",
-       "40  PARACETAMOL        6.0  45.0    3.0\n",
-       "8   PARACETAMOL        3.0  40.0    3.0\n",
-       "1     ENALAPRIL        1.0  20.0    1.0\n",
-       "35  PARACETAMOL        6.0  35.0    3.0\n",
-       "17  PARACETAMOL        4.0  30.0    0.0\n",
-       "18  PARACETAMOL        4.0  35.0    1.0"
+       "     medication  frequency  dose   count  score\n",
+       "4   PARACETAMOL        1.0  60.0    33.0    3.0\n",
+       "8   PARACETAMOL        3.0  40.0    21.0    3.0\n",
+       "1   PARACETAMOL        1.0  40.0     2.0    3.0\n",
+       "4     VARFARINA        1.0   5.0  3819.0    0.0\n",
+       "22  PARACETAMOL        4.0  40.0  3515.0    0.0\n",
+       "36  PARACETAMOL        6.0  36.0     9.0    3.0\n",
+       "33  PARACETAMOL        6.0  25.0     1.0    3.0\n",
+       "43  PARACETAMOL        6.0  60.0     4.0    3.0\n",
+       "12  PARACETAMOL        3.0  60.0    73.0    2.0\n",
+       "42  PARACETAMOL        6.0  55.0     1.0    3.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +354,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Save Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -225,7 +380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
