--- a/compute_ddc_models.ipynb
+++ b/compute_ddc_models.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Load Dataset"
    ]
@@ -13,12 +10,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-04-01 15:48:03--  https://github.com/nlp-pucrs/prescription-outliers/raw/master/data/prescriptions_sample.csv.gz\n",
+      "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
+      "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz [following]\n",
+      "--2019-04-01 15:48:03--  https://raw.githubusercontent.com/nlp-pucrs/prescription-outliers/master/data/prescriptions_sample.csv.gz\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.252.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.252.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 95274 (93K) [application/octet-stream]\n",
+      "Saving to: ‘data/prescriptions_sample.csv.gz’\n",
+      "\n",
+      "data/prescriptions_ 100%[===================>]  93,04K  --.-KB/s    in 0,04s   \n",
+      "\n",
+      "2019-04-01 15:48:04 (2,11 MB/s) - ‘data/prescriptions_sample.csv.gz’ saved [95274/95274]\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -43,10 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Aggregate Tuples"
    ]
@@ -54,16 +66,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -76,91 +97,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>MORFINA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>322</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
        "      <td>ALOPURINOL</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>21</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>DIAZEPAM</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>SULFAMETOXAZOL</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>960.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375</th>\n",
+       "      <th>389</th>\n",
        "      <td>POLIMIXINA</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>375000.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>1500000.0</td>\n",
+       "      <td>247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256</th>\n",
+       "      <th>40</th>\n",
+       "      <td>BISACODIL</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
        "      <td>MORFINA</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>436</th>\n",
-       "      <td>VARFARINA</td>\n",
-       "      <td>0.5</td>\n",
        "      <td>5.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>HIDRALAZINA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>3309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ALOPURINOL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>1219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>MORFINA</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <td>ENOXAPARINA</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>6734</td>\n",
+       "      <th>179</th>\n",
+       "      <td>MORFINA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>BISACODIL</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>MORFINA</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         medication  frequency      dose  count\n",
-       "185         MORFINA        1.0      32.0     13\n",
-       "322     PARACETAMOL        4.0      30.0    566\n",
-       "2        ALOPURINOL        1.0     150.0     21\n",
-       "101        DIAZEPAM        6.0      10.0    118\n",
-       "416  SULFAMETOXAZOL        0.5     960.0      4\n",
-       "375      POLIMIXINA        2.0  375000.0      6\n",
-       "256         MORFINA        6.0      57.0      2\n",
-       "306     PARACETAMOL        1.0      40.0      2\n",
-       "436       VARFARINA        0.5       5.0      1\n",
-       "139     ENOXAPARINA        2.0      60.0   6734"
+       "      medication  frequency       dose  count\n",
+       "5     ALOPURINOL        1.0      600.0      3\n",
+       "389   POLIMIXINA        2.0  1500000.0    247\n",
+       "40     BISACODIL        3.0       10.0    141\n",
+       "224      MORFINA        6.0        5.0      7\n",
+       "152  HIDRALAZINA        3.0       50.0   3309\n",
+       "4     ALOPURINOL        1.0      300.0   1219\n",
+       "304      MORFINA       24.0       67.0      1\n",
+       "179      MORFINA        1.0       14.0      7\n",
+       "33     BISACODIL        1.0       20.0     10\n",
+       "219      MORFINA        4.0       45.0      6"
       ]
      },
      "execution_count": 2,
@@ -178,10 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Build Models"
    ]
@@ -190,9 +208,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -223,17 +238,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>dose</th>\n",
+       "      <th>count</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>medication</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ENALAPRIL</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PARACETAMOL</th>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VARFARINA</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             frequency  dose  count  score\n",
+       "medication                                \n",
+       "ENALAPRIL            8     8      8      8\n",
+       "PARACETAMOL         46    46     46     46\n",
+       "VARFARINA           12    12     12     12"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models.groupby('medication').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -248,103 +354,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>ENALAPRIL</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>VARFARINA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3819.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>9183</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>5</th>\n",
+       "      <td>ENALAPRIL</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PARACETAMOL</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ENALAPRIL</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
        "      <td>PARACETAMOL</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>3515.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>264</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
+       "      <th>2</th>\n",
        "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>25.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
+       "      <th>14</th>\n",
        "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>11</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>73.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>ENALAPRIL</td>\n",
        "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>PARACETAMOL</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     medication  frequency  dose   count  score\n",
-       "4   PARACETAMOL        1.0  60.0    33.0    3.0\n",
-       "8   PARACETAMOL        3.0  40.0    21.0    3.0\n",
-       "1   PARACETAMOL        1.0  40.0     2.0    3.0\n",
-       "4     VARFARINA        1.0   5.0  3819.0    0.0\n",
-       "22  PARACETAMOL        4.0  40.0  3515.0    0.0\n",
-       "36  PARACETAMOL        6.0  36.0     9.0    3.0\n",
-       "33  PARACETAMOL        6.0  25.0     1.0    3.0\n",
-       "43  PARACETAMOL        6.0  60.0     4.0    3.0\n",
-       "12  PARACETAMOL        3.0  60.0    73.0    2.0\n",
-       "42  PARACETAMOL        6.0  55.0     1.0    3.0"
+       "     medication  frequency  dose count  score\n",
+       "4     ENALAPRIL        2.0  20.0  9183    0.0\n",
+       "5     ENALAPRIL        2.0  20.1     2    3.0\n",
+       "35  PARACETAMOL        6.0  35.0     4    3.0\n",
+       "37  PARACETAMOL        6.0  37.0     9    3.0\n",
+       "6   PARACETAMOL        2.0  40.0     1    3.0\n",
+       "7     ENALAPRIL        3.0  20.0    18    3.0\n",
+       "30  PARACETAMOL        4.0  70.0   264    0.0\n",
+       "2   PARACETAMOL        1.0  45.0     2    3.0\n",
+       "14  PARACETAMOL        3.0  75.0    11    3.0\n",
+       "6     ENALAPRIL        2.0  40.0    58    2.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,22 +461,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "models.to_csv('data/models.csv.gz', compression='gzip', index=None)"
@@ -378,12 +477,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_prescription.to_csv('data/prescriptions.csv.gz', compression='gzip', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg_prescription[agg_prescription['medication'].isin(selected_medications)].to_csv('data/test.csv.gz', compression='gzip', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -404,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
